src/objects/StatusLog__c.object
<CustomObject>
    <fields>
        <fullName>CalloutTime__c</fullName>
        <label>CalloutTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElapsedTime__c</fullName>
        <formula>InputProcessingTime__c + CalloutTime__c + OutputProcessingTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ErrorCode__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <label>Error Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InputProcessingTime__c</fullName>
        <label>Input Processing Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutputProcessingTime__c</fullName>
        <label>Output Processing Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestBody__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseBody__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Status Log</label>
    <listViews>
        <fullName>ViewAll</fullName>
        <columns>NAME</columns>
        <columns>UID__c</columns>
        <columns>Status__c</columns>
        <columns>ErrorCode__c</columns>
        <columns>RequestBody__c</columns>
        <columns>ResponseBody__c</columns>
        <columns>InputProcessingTime__c</columns>
        <columns>CalloutTime__c</columns>
        <columns>OutputProcessingTime__c</columns>
        <columns>ElapsedTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>ViewAll</label>
    </listViews>
    <nameField>
        <label>StatusLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>